Fixed menu jumping but not :hover state.
git-svn-id: https://svn.participatoryculture.org/svn/dtv/trunk@1181 bce20531-a64c-4166-8316-56baf4a01729

Original sha1: c822dca52d4cd82ae0353eb2bccb3e56c1120202

--- a/tv/platform/windows-xul/xul/chrome/content/main.css
+++ b/tv/platform/windows-xul/xul/chrome/content/main.css
@@ -1,5 +1,4 @@
 
-
 /* TITLEBAR 
 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - */
 
@@ -13,19 +12,19 @@
 	color: #FFFFFF;
 }
 
+.titlebar menu:hover {
+	-moz-appearance: none;
+	background: #000000;
+}
+
 .titlebar-toplevel {
 	margin: 2px 10px 0px 0px;
-	padding: 1px 5px;
 	border: 0px;
 }
 
 .titlebar menubar, .titlebar menubar:hover {
 	-moz-appearance: none;
-}
-
-.titlebar menu:hover {
-	-moz-appearance: none;
-	background-color: #000000;
+	border: 0;
 }
 
 .titlebar menuitem, .titlebar menu menu {
